# cryfs-wizard-draft

./: README.md  packages.txt  pyproject.toml
src/cryfs_wizard/: __init__.py  cli.py  core.py  gui.py
