[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryfs-wizard"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A setup wizard for creating encrypted home directories with backup capabilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
    "click>=8.0.0",
]

[project.scripts]
cryfs-wizard-cli = "cryfs_wizard.cli:main"
cryfs-wizard-gui = "cryfs_wizard.gui:main"
